[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scripts/EnemyController.gd" type="Script" id=1]
[ext_resource path="res://Assets/patrolling_indicator.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Pyramid/mummy.png" type="Texture" id=3]
[ext_resource path="res://Scripts/TorchLight.gd" type="Script" id=4]
[ext_resource path="res://Sprites/lighting/FirePointLight.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Detector.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Investigating.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Chasing.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Guarding.gd" type="Script" id=9]
[ext_resource path="res://Scripts/EnemyStateMachine.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Mover.gd" type="Script" id=11]
[ext_resource path="res://Sprites/Pyramid/mummy(2).png" type="Texture" id=12]
[ext_resource path="res://Sprites/Pyramid/mummy(1).png" type="Texture" id=13]
[ext_resource path="res://Scripts/Patrolling.gd" type="Script" id=14]
[ext_resource path="res://Scripts/Attacking.gd" type="Script" id=15]
[ext_resource path="res://Scripts/Sleeping.gd" type="Script" id=16]
[ext_resource path="res://Sprites/Pyramid/mummy/exports/mummyWalk1.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Pyramid/mummy/exports/mummyIdle.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Pyramid/mummy/exports/mummyWalk2.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "WalkFront",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 54.59

[node name="Enemy" type="KinematicBody2D" groups=[
"light_trackers",
]]
z_as_relative = false
script = ExtResource( 1 )
visionLightLevel = 9.0

[node name="EnemySprite" type="AnimatedSprite" parent="."]
rotation = -1.5708
frames = SubResource( 1 )
animation = "WalkFront"
frame = 2
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="EnemyTorchLight" type="Area2D" parent="."]
rotation = 1.5708
collision_layer = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Light2D" type="Light2D" parent="EnemyTorchLight"]
light_mask = 3
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )
offset = Vector2( -33.89, -35 )
mode = 2
shadow_enabled = true
shadow_color = Color( 1, 0, 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyTorchLight"]
shape = SubResource( 2 )

[node name="EnemyViewRadius" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="EnemyViewRadius"]
polygon = PoolVector2Array( 500, -200, 500, 200, 0, 0 )

[node name="Detector" type="Node2D" parent="."]
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Mover" type="Node" parent="."]
script = ExtResource( 11 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 5, 8, 5, -8, -5, -8, -5, 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 10 )

[node name="Patrolling" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="Guarding" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Chasing" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Investigating" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Attacking" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="Sleeping" type="Node" parent="StateMachine"]
script = ExtResource( 16 )

[node name="StateIndicatorSprite" type="Sprite" parent="."]
position = Vector2( -10, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
[connection signal="body_entered" from="EnemyTorchLight" to="EnemyTorchLight" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="EnemyTorchLight" to="EnemyTorchLight" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="EnemyViewRadius" to="Detector" method="_on_EnemyViewRadius_body_entered"]
[connection signal="body_exited" from="EnemyViewRadius" to="Detector" method="_on_EnemyViewRadius_body_exited"]
